tests/netconvert/errors/false_output/errors.netconvert
Error: Could not build output file 'output/net.net.xml' (No such file or directory).
Quitting (on error).
